# reachy2-sdk

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  pyproject.toml  reachy2_sdk.html  search.js  setup.cfg
.github/workflows/: docs.yml  lint.yml  publish_pypi.yml  pytest.yml  unit_tests.yml
reachy2_sdk/: config.html  media.html  orbita.html  parts.html  reachy_sdk.html  sensors.html  utils.html
reachy2_sdk/config/: reachy_info.html
reachy2_sdk/media/: audio.html  camera.html  camera_manager.html
reachy2_sdk/orbita/: orbita.html  orbita2d.html  orbita3d.html  orbita_axis.html  orbita_joint.html  orbita_motor.html  utils.html
reachy2_sdk/parts/: arm.html  goto_based_part.html  hand.html  head.html  joints_based_part.html  mobile_base.html  part.html
reachy2_sdk/sensors/: lidar.html
reachy2_sdk/utils/: custom_dict.html  utils.html
reachy_sdk/: __init__.py  actuator.py  arm.py  base_info.py  gripper.py  hand.py  head.py  joint.py  orbita.py  orbita2d.py  orbita3d.py  reachy.py  reachy_sdk.py  register.py
reachy_sdk/example/: xterrabot.py
scripts/: setup_git_hooks.sh  setup_vscode_config.sh  setup_vscode_extensions.sh
scripts/git_hooks/: pre-commit
scripts/vscode/: settings.json
src/: main.py  test_client.py
src/example/: Test_arm.ipynb  basic_tests.py  cameras.py  goto.py  head_control.ipynb  moves_introduction.ipynb  teleop_test.py  test_continuous_ik.py  test_goto.py  test_mobile_base.py  test_slider.py  turn_on.py
src/examples/: 1_getting_started.ipynb  2_goto_introduction.ipynb  2_moves_introduction.ipynb  3_arm_and_gripper.ipynb  4_head_control.ipynb  5_cameras_images.ipynb  6_mobile_base.ipynb  Untitled.ipynb  Untitled1.ipynb  basic_arm_control.ipynb  cameras.py  cameras_images.ipynb  draw_square.py  faster_writing.py  moves_introduction.ipynb  rerun_recorder.py  set_zero_pose.py  test_reachy.py  write_name.py
src/examples/rerun/: README.md  rerun_recorder.py
src/reachy2_sdk/: __init__.py  arm.py  audio.py  dynamixel_motor.py  hand.py  head.py  orbita2d.py  orbita3d.py  orbita_utils.py  reachy.py  reachy_sdk.py  register.py  utils.py  video.py
src/reachy2_sdk/config/: __init__.py  reachy_info.py
src/reachy2_sdk/media/: __init__.py  audio.py  camera.py  camera_manager.py
src/reachy2_sdk/motors/: __init__.py  register.py
src/reachy2_sdk/orbita/: __init__.py  orbita.py  orbita2d.py  orbita3d.py  orbita_axis.py  orbita_joint.py  orbita_motor.py  utils.py
src/reachy2_sdk/parts/: __init__.py  arm.py  goto_based_part.py  hand.py  head.py  joints_based_part.py  mobile_base.py  part.py
src/reachy2_sdk/sensors/: __init__.py  lidar.py
src/reachy2_sdk/subparts/: __init__.py  lidar.py
src/reachy2_sdk/utils/: __init__.py  custom_dict.py  singleton.py  utils.py
src/reachy_v2_sdk/: arm.py  audio.py  dynamixel_motor.py  hand.py  head.py  orbita2d.py  orbita3d.py  orbita_utils.py  reachy.py  reachy_sdk.py  register.py  trajectory.py
src/subparts/: lidar.py
tests/: conftest.py  test_advanced_goto_functions.py  test_arm.py  test_basic_commands.py  test_basic_movements.py  test_camera.py  test_hand.py  test_head.py  test_orbita2d.py  test_orbita3d.py  test_orbita_utils.py  test_reachy.py  test_reachy_sdk.py  test_utils.py  test_xterrabot.py  tests_advanced_goto_functions.py
tests/integration/: basic_tests.py  teleop_test.py  test_client.py  test_goto.py  test_gripper.py  test_mobile_base.py
tests/offline/: test_arm.py  test_hand.py  test_head.py  test_orbita2d.py  test_reachy.py  test_reachy_sdk.py  test_utils.py
tests/online/: conftest.py  test_advanced_goto_functions.py  test_basic_movements.py  test_camera.py  test_hand.py
tests/units/offline/: test_arm.py  test_camera.py  test_hand.py  test_head.py  test_lidar.py  test_mobile_base.py  test_orbita2d.py  test_orbita3d.py  test_reachy_sdk.py  test_utils.py
tests/units/online/: conftest.py  test_actuators_properties.py  test_advanced_goto_functions.py  test_audit.py  test_basic_movements.py  test_camera.py  test_hand.py  test_interpolations.py  test_mobile_base.py  test_multiple_connections.py
