[metadata]
name = reachy2-sdk
version = 2.0
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/reachy2-sdk
description = Reachy 2 SDK
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = reachy2_sdk
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    numpy==1.26.1
    protobuf==4.25.1
    grpcio==1.59.3
    pyquaternion==0.9.9
    mobile-base-sdk@git+https://github.com/pollen-robotics/mobile-base-sdk.git@6-update-mobile-base-with-latest-devs

[options.extras_require]
dev = black==23.12.1
      flake8==7.0.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.8.0
      isort==5.13.2
      types-protobuf==4.24.0.1
pollen = reachy2-sdk-api@git+ssh://git@github.com/pollen-robotics/reachy2-sdk-api.git#subdirectory=python

[flake8]
exclude = tests, src/example
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True

[coverage:report]
show_missing=True
exclude_also =
    @pytest.mark.online
    def reachy_sdk_zeroed  
    def reachy_sdk()

[tool:pytest]
testpaths = tests
markers = 
    online: test connected to simulated robot
    offline: no grpc connection required

[mypy]
ignore_missing_imports = True
exclude = (tests/|src/example/)
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True
