[metadata]
name = reachy2-sdk
version = attr: reachy2_sdk.__version__
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/reachy2-sdk
description = Reachy 2 SDK
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
include_package_data = True
package_dir=
    =src
install_requires =
    numpy>=1.24.0,<=1.26.4
    protobuf>=4.25.0,<=4.25.3
    grpcio>=1.59.0, <=1.62.2
    pyquaternion==0.9.9
    opencv-python>=4.8.0, <4.9.0
    mobile-base-sdk>=1.0.2, <1.1.0
    reachy2-sdk-api>=1.0.4,  <1.1.0

[options.packages.find]
where = src

[options.extras_require]
dev = black==23.12.1
      flake8==7.0.0
      pytest==7.4.3
      coverage==7.3.2
      mypy==1.8.0
      isort==5.13.2
      types-protobuf>=4.24.0,<=4.25.3
      pdoc>=14.0.0,<=14.4.0

[flake8]
exclude = *test*
max-line-length = 128
extend-ignore = E203
max-complexity = 10

[coverage:run]
branch=True
omit = 
    /home/runner/work/reachy2-sdk/reachy2-sdk/config-3.py
    /home/runner/work/reachy2-sdk/reachy2-sdk/config.py

[coverage:report]
show_missing=True
exclude_also =
    @pytest.mark.online
    def reachy_sdk_zeroed  
    def reachy_sdk()

[tool:pytest]
testpaths = tests/units
markers = 
    online: test connected to simulated robot
    offline: no grpc connection required
    sr_camera : test for SR sr_camera
    teleop_camera : test for teleop_camera

[mypy]
ignore_missing_imports = True
exclude = test
strict = True
plugins = numpy.typing.mypy_plugin
explicit_package_bases = True
